# lmopt

./: .gitignore  CLAUDE.md  Cargo.toml  FAER.md  README.md
examples/: autodiff_example.rs  gaussian_fitting.rs  jacobian_methods.rs  linear_fitting.rs
src/: error.rs  lib.rs  problem.rs
src/lm/: algorithm.rs  convergence.rs  mod.rs  trust_region.rs
src/utils/: autodiff.rs  finite_difference.rs  jacobian.rs  matrix_convert.rs  mod.rs
tests/: jacobian_comparison.rs  problem.rs
tests/integration/: levenberg_marquardt_comparison.rs  mod.rs
tests/lm/: algorithm.rs  convergence.rs  mod.rs  trust_region.rs
tests/utils/: autodiff.rs  finite_difference.rs  jacobian.rs  jacobian_comparison.rs  matrix_conversion.rs  mod.rs
